fix wrap text

--- a/src/style.css
+++ b/src/style.css
@@ -148,7 +148,7 @@ textarea {
   white-space: pre;
 
   &.wrap {
-    white-space: unset;
+    white-space: pre-line;
   }
 }
 
